# etf-isa-portfolio

./: .env.example  .gitignore  CLAUDE.md  README.md  _config.yml  _toc.yml  index.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy-book.yml
_static/: custom.css
agent/: app.py  build_knowledge_base.py  knowledge_base.md  prompts.py  tools.py
archive/: curation.ipynb  extras_dont_check_in_code.ipynb  test_curation.ipynb
content/: 00a_for_newcomers.md  00b_methodology.md  98_isa_tax_context.md  99_glossary.md
data/: schema.sql
data/config/: commodity_index_weights.json  currency_units.json  etf.json  etf_tickers.json  isin_ticker_map.json
data/investment_statements/: ISA_Trading_statement_5_Apr_2025_to_5_Apr_2026.csv  RebalancingTrades2026.csv
data/output/: final_portfolio.csv
data/raw/: justetf_class-bonds_developed_americasanduk.csv  justetf_class-bonds_developed_apac.csv  justetf_class-bonds_developed_emea.csv  (+9 more)
etf_utils/: __init__.py  backtesting.py  config.py  data_io.py  data_provider.py  database.py  metrics.py  platform_check.py
notebooks/: 01_data_collection.ipynb  02_etf_screening.ipynb  03_portfolio_construction.ipynb  04_backtesting.ipynb  04_performance_tracking old.ipynb  04_performance_tracking.ipynb  05_backtesting.ipynb  05_pnl_tracking.ipynb
scripts/: ensure_hide_input.py
tests/: conftest.py  test_backtesting.py  test_config.py  test_data_io.py  test_data_provider.py  test_database.py  test_etf_analysis.py  test_fy25_regression.py  test_metrics.py  test_pipeline_smoke.py  test_platform_check.py
(+1 files in other folders)
