[project]
name = "etf-isa-portfolio"
version = "0.1.0"
description = "A systematic DIY ETF ISA portfolio using risk-adjusted ETF screening"
requires-python = ">=3.13"
dependencies = [
    "jupyter-book>=1.0.0,<2.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.0.0",
    "scipy>=1.10.0",
    "seaborn>=0.13.0",
    "yfinance>=0.2.0",
    "justetf-scraping @ git+https://github.com/nairraks/justetf-scraping.git",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Pipeline smoke tests run every cell of each notebook end-to-end. They hit
# live data providers (JustETF, AlphaVantage, yfinance, InvestEngine) and
# take several minutes, so they are opt-in: `uv run pytest -m pipeline`.
markers = [
    "pipeline: end-to-end notebook smoke tests (opt-in, hits live APIs)",
]
addopts = "-m 'not pipeline'"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D1"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["etf_utils"]
